[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "cython", "numpy", "scipy", "vtk"]
build-backend = "setuptools.build_meta"

[project]
name = "ttcrpy"
authors = [
    {name = "Bernard Giroux", email = "bernard.giroux@inrs.ca"},
]
description = "Code to perform raytracing for geophysical applications"
license = {file = "01_LICENSE.txt"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/groupeLIAMG/ttcr"
documentation = "https://ttcrpy.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ttcrpy/_version.py"

[tool.cibuildwheel]
# Skip 32-bit builds & building PyPy wheels on all platforms
skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux*", ]

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
