[build-system]
requires = ["setuptools", "setuptools-scm[toml]", "cython", "numpy", "scipy", "vtk"]
build-backend = "setuptools.build_meta"

[project]
name = "ttcrpy"
authors = [
    {name = "Bernard Giroux", email = "bernard.giroux@inrs.ca"},
]
description = "Code to perform raytracing for geophysical applications"
license = {file = "01_LICENSE.txt"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/groupeLIAMG/ttcr"
documentation = "https://ttcrpy.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/ttcrpy/_version.py"

[tool.cibuildwheel]
# Skip 32-bit builds & building PyPy wheels on all platforms
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*", ]

# The OpenCL grids are compiled on every platform, so each wheel links against
# the OpenCL ICD loader.  The loader itself is treated as a system dependency
# (excluded from the wheel below); end users need an OpenCL runtime/driver for
# the GPU FSM, exactly as they need a GPU.

[tool.cibuildwheel.linux]
# manylinux images are RPM-based: install the OpenCL headers and ICD loader.
before-all = "yum install -y opencl-headers ocl-icd ocl-icd-devel"
# Do not vendor the ICD loader; use the one on the target system.
repair-wheel-command = "auditwheel repair --exclude libOpenCL.so.1 -w {dest_dir} {wheel}"

[tool.cibuildwheel.windows]
# Install the OpenCL loader + headers via the vcpkg preinstalled on the runner.
before-all = "vcpkg install opencl:x64-windows"
# The custom repair command below means cibuildwheel does not auto-install
# delvewheel, so install it into the build environment ourselves.
before-build = "pip install delvewheel"
# Pin the triplet so setup.py resolves the matching vcpkg include/lib dirs.
environment = { VCPKG_DEFAULT_TRIPLET = "x64-windows" }
# Do not vendor OpenCL.dll; rely on the loader shipped with the GPU driver.
# Invoke delvewheel as a module: the `delvewheel` script shim is not on PATH
# when a custom repair command runs, but the package is installed.
repair-wheel-command = "python -m delvewheel repair --exclude OpenCL.dll -w {dest_dir} {wheel}"

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
# OpenCL is a system framework on macOS; nothing to install.
archs = ["x86_64", "arm64"]
